# property-hunter

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
docs/: agents.md  api.md  contributing.md  index.md  propertyhunter-ai-plan.md
src/property_hunter/: __init__.py  cli.py  logging.py  settings.py
src/property_hunter/adapters/: __init__.py  agents.py  api.py  dashboard.py  kiut.py  notion.py  sqlite.py  uldk.py  userscript.py
src/property_hunter/application/: ports.py  use_cases.py
src/property_hunter/domain/: __init__.py  export.py  geo.py  models.py
tests/: conftest.py  test_property_hunter.py
tests/e2e/cli/: test_cli.py
tests/fixtures/listings/: otodom_pepowo_mpzp.json
tests/integration/adapters/: test_api.py  test_sqlite_repository.py
tests/integration/agents/: test_real_listing_eval.py
tests/unit/adapters/: test_agents.py  test_dashboard.py  test_notion.py  test_userscript.py
tests/unit/application/: test_analyze_listing.py
tests/unit/domain/: test_export.py  test_geo.py
